--- a/Basalt.CommandParser/Basalt.CommandParser.csproj
+++ b/Basalt.CommandParser/Basalt.CommandParser.csproj
@@ -1,9 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
+    <Title>Command Parser</Title>
+    <Authors>Damocles</Authors>
+    <Description>Command line argument parser</Description>
+    <Version>1.0.0</Version>
+
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <RepositoryUrl>https://github.com/BrandenEK/Basalt.CommandParser</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
