--- a/Basalt.CommandParser/Basalt.CommandParser.csproj
+++ b/Basalt.CommandParser/Basalt.CommandParser.csproj
@@ -10,6 +10,9 @@
     <Description>Command line argument parser</Description>
     <Version>1.0.1</Version>
 
+    <!-- Temp -->
+    <OutputType>Exe</OutputType>
+
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <RepositoryUrl>https://github.com/BrandenEK/Basalt.CommandParser</RepositoryUrl>
