core: brand new parsing system (#4)
* core: add new commandparser

* core: temp make executable

* core: more new stuff

* core: clean up name parsing

* core: require arg description

* core: display help

* core: simplify parsing

* core: add error name

* core: create token based on arg

* core: change implicit usings

* core: handle help better

* core: add help attr

* core: actually process args

* core: add more types and actually set values

* core: check attribute matches property type

* core: fix up improper setup ex

* core: clean up operator

* core: remove error name

* core: find duiplicate argument names

* core: reform process exceptions

* core: optimize help method

* core: fix dash in shortname

* core: prevent more invalid long names

* core: change how exceptions are handled

--- a/Basalt.CommandParser/Basalt.CommandParser.csproj
+++ b/Basalt.CommandParser/Basalt.CommandParser.csproj
@@ -2,13 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
     
     <Title>Command Parser</Title>
     <Authors>Damocles</Authors>
     <Description>Command line argument parser</Description>
     <Version>1.0.1</Version>
+
+    <!-- Temp -->
+    <OutputType>Exe</OutputType>
 
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
