core: prepare for release (#12)
* core: change back to library

* core: make things internal

* core: more internals

* core: remove logs

* core: add simple documentation

--- a/Basalt.CommandParser/Basalt.CommandParser.csproj
+++ b/Basalt.CommandParser/Basalt.CommandParser.csproj
@@ -10,12 +10,13 @@
     <Description>Command line argument parser</Description>
     <Version>1.0.1</Version>
 
-    <!-- Temp -->
-    <OutputType>Exe</OutputType>
-
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <RepositoryUrl>https://github.com/BrandenEK/Basalt.CommandParser</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="Basalt.CommandParser.Tests" />
+  </ItemGroup>
 
 </Project>
