core: upgrade workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,13 @@
 
+# Basalt application publisher v1.0.0
 name: Build
 
 on:
   push:
     tags: [ "**" ]
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -11,18 +15,18 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 8.0.x
 
     - name: Build Project
       run: |
         dotnet restore
         dotnet build --configuration Release --no-restore
-        dotnet test
+        dotnet test --configuration Release --no-build
 
     - name: Upload Nuget
       run: dotnet nuget push **\*.nupkg -k ${{ secrets.NUGET_API_KEY }} -s https://api.nuget.org/v3/index.json
